--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,6 @@
 <h1>Homes#top</h1>
 <p>Find me in app/views/homes/top.html.erb</p>
+
+<p><%= link_to '新規投稿', lists_new_path %></p>
+
+<P><%= link_to '投稿一覧', lists_path %></P>
