--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,4 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>TOPページ</h1>
 
 <p><%= link_to '新規投稿', lists_new_path %></p>
 
