--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,23 +23,29 @@ header, h1, nav, .list-comment {
   font-family: 'Kaushan', cursive, sans-serif;
 }
 
+header, nav {
+  background-image: url(/images/header.jpg);
+}
+
 header {
-  width: 90%;
-  padding: 15px 0;
-  margin: 30px auto 0;
+  width: 100%;
   text-align: center;
   border-top: solid 5px #000000;
-  background-image: url(/images/header.jpg);
 }
 
 header .headline {
   font-size: 32px;
 }
 
+body {
+  background-image: url(/images/haikei.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 nav {
-  width: 880px;
+  width: 100%;
   margin:0 auto;
-  border-top: solid 2px #000000;
   border-bottom: solid 2px #000000;
 }
 
@@ -58,6 +64,7 @@ nav {
 main {
   width: 880px;
   margin: 0 auto;
+
 }
 
 .list-wrap {
